--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
